name:                generic-deriving-biplate
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/sgz#readme
license:             BSD3
license-file:        LICENSE
author:              Ferdinand van Walree
maintainer:          ferdinandvwalree@gmail.com
copyright:           2017 Ferdinand van Walree
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Generics.Deriving.Biplate, Generics.Deriving.Uniplate, Generics.Deriving.Internal
  build-depends:       base >= 4.7 && < 5
                       , transformers
                       , generic-deriving
  default-language:    Haskell2010

test-suite generic-deriving-biplate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , generic-deriving-biplate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sgz
